fixed issue with menu overlapping chapter name on mobile

--- a/html5/style.css
+++ b/html5/style.css
@@ -8,8 +8,8 @@ header,a.button
     transition-duration: 0.5s;
     transition-timing-function:ease;
 }
-html,body,header{position:absolute;}
-html,body,section,.textContent,#menu>p,#menu>a.button,#chapter-bar,#chapter-name{width:100%;}
+html,body,header,#main{position:absolute;}
+html,body,section,.textContent,#menu>p,#menu>a.button,#main,#chapter-bar,#chapter-name{width:100%;}
 html,body,section,.textContent{height:100%;}
 h1{font-size:200%;}
 h2{font-size:150%;}
